# ticker-wars

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  SECURITY.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  daily-pipeline.yml  live-price-refresh.yml
docs/: ChronosBenchmark.md  TimesFMBenchmark.md  database-schema.md  deployment-notes.md  local-development.md  pipeline.md  portfolio-notes.md  publication-checklist.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  index.tsx  setupTests.ts
pipeline/: __init__.py  cli.py  config.py  dates.py  db.py
pipeline/benchmarking/: runtime.py
pipeline/commands/: __init__.py  benchmark.py  common.py  daily.py  dashboard.py  ingestion.py  live_prices.py  predictions.py  scoring.py
pipeline/dashboard/: refresh.py  snapshot_export.py
pipeline/evaluation/: metrics.py  scoring.py  user_verdicts.py
pipeline/features/: build_features.py  indicators.py
pipeline/llm/: client.py  (+1 more)
supabase/: config.toml  schema.sql
tests/: test_chronos_model.py  test_cli_smoke.py  test_config.py  test_daily_pipeline.py  test_dashboard_commands.py  test_dashboard_contract.py  test_database_access.py  test_dates.py  test_features.py  test_forecast_horizons.py  test_gamification.py  test_historical_predictions.py  test_ingestion.py  test_logo_ingestion.py  test_metrics.py  test_prediction_contract.py  test_project_scaffold.py  test_scoring.py  test_snapshot_export.py  test_timesfm_model.py  test_training_window.py  test_warren_buffbot.py
(+225 files in other folders)
