[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "next-day-price"
version = "0.1.0"
description = "Next-day stock return prediction pipeline and dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "supabase>=2.4",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
timesfm = [
    "timesfm[torch]>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
